# constraint-programming

./: .gitignore  MODULE.bazel  README.md  fair_allocation.py  machine_scheduling.py  requirements.in  requirements.txt  set_covering_problem.py  simple_lp_personnel_scheduling.py  simple_lp_produce_sell_inventory_balance.py  simple_lp_product_mix.py
src/: BUILD.bazel  main.py
src/algorithms/: BUILD.bazel  simple_lp_product_mix.py  test_simple_lp_product_mix.py
src/algorithms/call_centre_personnel_scheduling/: BUILD.bazel  algorithm.py  model.py  test_algorithm.py  test_model.py
src/class_scheduling/: __main__.py  common.py  compare.py  cp_solver.py  data.py  instance_generator.py  mip_solver.py  report.py
src/class_scheduling/sample/: BUILD.bazel  benchmark.py  cp_solver.py  data.py  input.json  mip_runner.py  mip_solver.py  model.py  report.py  runner.py  test_cp_solver.py  test_data.py  test_mip_solver.py  todo.txt
src/routers/: BUILD.bazel  product_mix.py  test_product_mix.py
