load("@rules_python//python:defs.bzl", "py_library", "py_test")

py_library(
    name = "routers",
    srcs = ["product_mix.py"],
    deps = [
        "//src/algorithms:simple_lp_product_mix"
    ],
    visibility = ["//visibility:public"],
)


py_test(
    name = "test_product_mix",
    srcs = ["test_product_mix.py"],
    deps = [
        ":routers",
        "//src:main",
        "@pip//pytest",
        "@pip//pydantic",
        "@pip//fastapi",
        "@pip//httpx",
    ]
)
