load("@rules_python//python:defs.bzl", "py_test")

py_library(
    name = "call_centre_personnel_scheduling",
    srcs = ["model.py"],
    visibility = ["//visibility:public"],
    deps = [
        "@pip//mip",
        "@pip//pydantic"
    ]
)

py_test(
    name = "test_model",
    srcs = ["test_model.py"],
    deps = [
        ":call_centre_personnel_scheduling",
        "@pip//pytest",
        "@pip//pydantic",        
    ]
)
