load("@rules_python//python:defs.bzl", "py_test")

py_test(
    name = "test_data",
    srcs = ["model.py", "data.py", "test_data.py"],
    data = ["input.json"],
    deps = [        
        "@pip//pytest",
        "@pip//pydantic",        
    ],
)

py_test(
    name = "test_cp_solver",
    srcs=["model.py", "data.py", "cp_solver.py", "test_cp_solver.py"],
    deps=[
        "@pip//pytest",
        "@pip//pydantic",
        "@pip//ortools",
    ]
)

py_binary(
    name = "run_cp_solver",
    srcs = [
        "model.py",
        "data.py",
        "cp_solver.py",
        "runner.py",
    ],
    data = ["input.json"],
    deps = [
        "@pip//pydantic",
        "@pip//ortools",
    ],
    main = "runner.py",
)

