load("@rules_python//python:defs.bzl", "py_test")

py_test(
    name = "test_data",
    srcs = ["model.py", "data.py", "test_data.py"],
    data = ["input.json"],
    deps = [        
        "@pip//pytest",
        "@pip//pydantic",
        "@pip//pyfunctional",
    ],
)

py_test(
    name = "test_cp_solver",
    srcs=["model.py", "data.py", "cp_solver.py", "test_cp_solver.py"],
    deps=[
        "@pip//pytest",
        "@pip//pydantic",
        "@pip//ortools",
        "@pip//pyfunctional",
    ],
)

py_binary(
    name = "run_cp_solver",
    srcs = [
        "model.py",
        "data.py",
        "cp_solver.py",
        "report.py",
        "runner.py",
    ],
    data = ["input.json"],
    deps = [
        "@pip//pydantic",
        "@pip//ortools",
        "@pip//openpyxl",
        "@pip//pyfunctional",
    ],
    main = "runner.py",
)
